kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: konfigurasyon-planlayici-service
spec:
  selector:
    app: konfigurasyon-planlayici
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
